# neo.js

./: .gitignore  .gitmodules  1.json  CMakeLists.txt  README.md  TODO.md  data.json  index.asm  index.json  index.mjs  test.mjs
cmd/: main.c
include/compiler/: asm.h  ast_class_accessor.h  ast_class_method.h  ast_class_property.h  ast_declaration_function.h  ast_decorator.h  ast_directive.h  ast_export_namespace.h  ast_export_specifier.h  ast_expression.h  ast_expression_array.h  ast_expression_arrow_function.h  ast_expression_assigment.h  ast_expression_call.h  ast_expression_class.h  ast_expression_condition.h  ast_expression_function.h  ast_expression_group.h  ast_expression_member.h  ast_expression_new.h  ast_expression_object.h  ast_expression_spread.h  ast_expression_super.h  ast_expression_this.h  ast_expression_yield.h  ast_function_argument.h  ast_function_body.h  ast_identifier.h  ast_import_specifier.h  ast_interpreter.h  ast_literal_boolean.h  ast_literal_null.h  ast_literal_numeric.h  ast_literal_regexp.h  ast_literal_string.h  ast_literal_template.h  ast_literal_undefined.h  ast_object_accessor.h  ast_object_key.h  ast_object_method.h  (+112 more)
include/compiler/ast/: class_accessor.h  class_method.h  class_property.h  declaration_class.h  declaration_export.h  declaration_function.h  declaration_import.h  declaration_variable.h  decorator.h  directive.h  export_all.h  export_default.h  export_namespace.h  export_specifier.h  expression.h  expression_array.h  expression_arrow_function.h  expression_assigment.h  expression_call.h  expression_class.h  expression_condition.h  expression_function.h  expression_group.h  expression_member.h  expression_new.h  expression_object.h  expression_spread.h  expression_super.h  expression_this.h  expression_yield.h  function_argument.h  function_body.h  identifier.h  import_attribute.h  import_default.h  import_namespace.h  import_specifier.h  interpreter.h  literal_boolean.h  literal_null.h  (+40 more)
include/core/: allocator.h  any.h  bigint.h  buffer.h  clock.h  common.h  error.h  fs.h  hash.h  hash_map.h  json.h  list.h  location.h  map.h  path.h  position.h  regexp.h  string.h  unicode.gen.h.in  unicode.h  variable.h
include/engine/: array.h  bigint.h  boolean.h  callable.h  cfunction.h  chunk.h  context.h  coroutine.h  exception.h  function.h  handle.h  interrupt.h  null.h  number.h  object.h  runtime.h  scope.h  signal.h  stackframe.h  string.h  symbol.h  task.h  type.h  undefined.h  uninitialized.h  value.h  variable.h
include/engine/basetype/: array.h  async_cfunction.h  bigint.h  boolean.h  callable.h  cfunction.h  coroutine.h  error.h  function.h  null.h  (+8 more)
include/js/: array.h  boolean.h  callable.h  context.h  error.h  function.h  handle.h  infinity.h  nan.h  null.h  number.h  object.h  runtime.h  scope.h  stackframe.h  string.h  symbol.h  type.h  undefined.h  value.h  variable.h
include/runtime/: array.h  array_iterator.h  async_generator_function.h  console.h  constant.h  error.h  function.h  generator.h  iterator.h  object.h  promise.h  range_error.h  reference_error.h  suppressed_error.h  symbol.h  time.h  vm.h
launch/: noix.c
src/: noix.c
src/compiler/: ast_class_accessor.c  ast_class_method.c  ast_class_property.c  ast_declaration_class.c  ast_declaration_export.c  ast_declaration_function.c  ast_declaration_import.c  ast_declaration_variable.c  ast_decorator.c  ast_directive.c  ast_export_all.c  ast_export_default.c  ast_export_namespace.c  ast_export_specifier.c  ast_expression.c  ast_expression_array.c  ast_expression_arrow_function.c  ast_expression_assigment.c  ast_expression_call.c  ast_expression_class.c  ast_expression_condition.c  ast_expression_function.c  ast_expression_group.c  ast_expression_member.c  ast_expression_new.c  ast_expression_object.c  ast_expression_spread.c  ast_expression_super.c  ast_expression_this.c  ast_expression_yield.c  ast_function_argument.c  ast_function_body.c  ast_identify.c  ast_import_attribute.c  ast_import_default.c  ast_import_namespace.c  ast_import_specifier.c  ast_interpreter.c  ast_literal_boolean.c  ast_literal_null.c  (+123 more)
src/core/: allocator.c  any.c  array.c  bigint.c  buffer.c  clock.c  error.c  fs.c  hash.c  hash_map.c  json.c  list.c  location.c  map.c  path.c  rbtree.c  regexp.c  string.c  unicode.c  variable.c
src/engine/: array.c  bigint.c  boolean.c  callable.c  cfunction.c  chunk.c  context.c  coroutine.c  exception.c  function.c  handle.c  interrupt.c  null.c  number.c  object.c  runtime.c  scope.c  signal.c  stackframe.c  string.c  symbol.c  task.c  undefined.c  uninitialized.c  value.c  variable.c
src/js/: array.c  boolean.c  context.c  error.c  function.c  handle.c  infinity.c  nan.c  null.c  number.c  object.c  runtime.c  scope.c  stackframe.c  string.c  symbol.c  undefined.c  variable.c
src/runtime/: aggregate_error.c  array.c  array_buffer.c  array_iterator.c  async_function.c  async_generator.c  async_generator_function.c  bigint.c  boolean.c  console.c  constant.c  date.c  error.c  function.c  generator.c  generator_function.c  intl.c  iterator.c  object.c  promise.c  range_error.c  reference_error.c  suppressed_error.c  symbol.c  syntax_error.c  time.c  type_error.c  vm.c
tests/: config.h.in  main.c  main.cpp  util.h
tests/compiler/: expression.cpp  identifier.cpp  parser.cpp  test.hpp  test_null.cpp  test_number.cpp  test_program.cpp  test_statement_block.cpp  test_statement_break.cpp  test_statement_continue.cpp  test_statement_debugger.cpp  test_statement_do_while.cpp  test_statement_empty.cpp  test_statement_for.cpp  test_statement_for_await_of.cpp  test_statement_for_in.cpp  test_statement_for_of.cpp  test_statement_if.cpp  test_statement_labeled.cpp  test_statement_return.cpp  test_statement_switch.cpp  test_statement_throw.cpp  test_statement_try.cpp  test_statement_while.cpp  test_string.cpp  test_token.cpp  test_undefined.cpp  token.cpp
tests/core/: allocator.cpp  allocator_alloc.c  allocator_free.c  error.cpp  test_allocator.cpp  test_location.cpp  unicode.cpp
tests/engine/: neo_test_engine.cpp
tests/runtime/: test_object.cpp
(+521 files in other folders)
